--- a/index.html
+++ b/index.html
@@ -82,7 +82,11 @@
               pariatur aperiam laudantium, nam accusantium atque totam ipsum.
               Dolorum quos officiis corrupti molestias?
             </p>
-            <span class="card__span"><a href="#continue-reading" class="card__link">Continue Reading >></a></span>
+            <span class="card__span"
+              ><a href="#continue-reading" class="card__link"
+                >Continue Reading >></a
+              ></span
+            >
           </div>
           <div class="card">
             <h1 class="card__header">Indonectetus facilis</h1>
@@ -101,7 +105,11 @@
               pariatur aperiam laudantium, nam accusantium atque totam ipsum.
               Dolorum quos officiis corrupti molestias?
             </p>
-            <span class="card__span"><a href="#continue-reading" class="card__link">Continue Reading >></a></span>
+            <span class="card__span"
+              ><a href="#continue-reading" class="card__link"
+                >Continue Reading >></a
+              ></span
+            >
           </div>
           <div class="card">
             <h1 class="card__header">Indonectetus facilis</h1>
@@ -120,11 +128,147 @@
               pariatur aperiam laudantium, nam accusantium atque totam ipsum.
               Dolorum quos officiis corrupti molestias?
             </p>
-            <span class="card__span"><a href="#continue-reading" class="card__link">Continue Reading >></a></span>
+            <span class="card__span"
+              ><a href="#continue-reading" class="card__link"
+                >Continue Reading >></a
+              ></span
+            >
           </div>
         </section>
-        <section class="gallery"></section>
-        <section class="social-media"></section>
+        <section class="gallery">
+          <h1>Latest From The Gallery</h1>
+          <div class="gallery-grid">
+            <img
+              src="https://picsum.photos/550/250?q=5"
+              class="gallery-grid__main"
+              alt="gallery main image"
+            />
+            <img
+              src="https://picsum.photos/120/120?q=6"
+              class="gallery-grid__one"
+              alt="gallery image 1"
+            />
+            <img
+              src="https://picsum.photos/120/120?q=7"
+              class="gallery-grid__two"
+              alt="gallery image 2"
+            />
+            <img
+              src="https://picsum.photos/120/120?q=8"
+              class="gallery-grid__three"
+              alt="gallery image 3"
+            />
+            <img
+              src="https://picsum.photos/120/120?q=9"
+              class="gallery-grid__four"
+              alt="gallery image 4"
+            />
+            <img
+              src="https://picsum.photos/120/120?q=10"
+              class="gallery-grid__five"
+              alt="gallery image 5"
+            />
+            <img
+              src="https://picsum.photos/120/120?q=11"
+              class="gallery-grid__six"
+              alt="gallery image 6"
+            />
+          </div>
+        </section>
+        <section class="social-media">
+          <div class="newsletter">
+            <h3><i>Newsletter</i></h3>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quod,
+              consequatur aliquid. Quibusdam harum velit ad cum! Praesentium
+              consectetur ipsam doloribus!
+            </p>
+            <form class="form-sign-up">
+              <input
+                type="email"
+                name="email"
+                class="form-sign-up__email-input"
+                placeholder="Enter Your Email Here"
+              />
+              <button type="submit" class="form-sign-up__submit-button">
+                <b>SIGN UP</b>
+              </button>
+            </form>
+            <div class="stay-social">
+              <h3><i>Stay Social</i></h3>
+              <div class="social-icons">
+              <div class="social-icons__linkedin">
+                <img src="/img/linkedin.svg" alt="linkedin-icon">
+                <p>LinkedIn</p>
+              </div>
+              <div class="social-icons__pinterest">
+                <img src="/img/pinterest.svg" alt="pinterest-icon">
+                <p>Pinterest</p>
+              </div>
+              <div class="social-icons__twitter">
+                <img src="/img/twitter.svg" alt="twitter-icon">
+                <p>Twitter</p>
+              </div>
+              <div class="social-icons__rss-feed">
+                <img src="/img/rss-feed.svg" alt="rss-feed-icon">
+                <p>RSS Feed</p>
+              </div>
+              </div>
+            </div>
+          </div>
+          <div class="from-the-blog">
+            <h3><i>From The Blog</i></h3>
+            <div class="blog-post">
+              <h5 class="blog-post__title">Blog Post Title</h5>
+              <span>Posted by Admin on oo.oo.oooo</span>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit
+                laudantium cum iure ducimus alias accusamus!
+              </p>
+              <span class="social-media__span"
+                ><a href="#read-more" class="social-media__link"
+                  >Read more >></a
+                ></span
+              >
+            </div>
+            <div class="blog-post">
+              <h5 class="blog-post__title">Blog Post Title</h5>
+              <span>Posted by Admin on oo.oo.oooo</span>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit
+                laudantium cum iure ducimus alias accusamus!
+              </p>
+              <span class="social-media__span"
+                ><a href="#read-more" class="social-media__link"
+                  >Read more >></a
+                ></span
+              >
+            </div>
+          </div>
+          <div class="latest-from-twitter">
+            <h3><i>Latest From Twitter</i></h3>
+            <p>
+              @namehere Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Eius, magnam sed! Ipsa id asperiores, modi pariatur debitis unde
+              illum earum?
+            </p>
+            <p>
+              @namehere Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Eius, magnam sed! Ipsa id asperiores, modi pariatur debitis unde
+              illum earum?
+            </p>
+            <p>
+              @namehere Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Eius, magnam sed! Ipsa id asperiores, modi pariatur debitis unde
+              illum earum?
+            </p>
+            <span class="social-media__span"
+              ><a href="#sign-up-twitter" class="social-media__link"
+                >Sign up to our Twitter feed here >></a
+              ></span
+            >
+          </div>
+        </section>
       </main>
       <footer class="footer">
         <span class="footer__span footer__span_left"
