fashion-site is done

--- a/index.html
+++ b/index.html
@@ -199,19 +199,19 @@
               <div class="social-icons">
               <div class="social-icons__linkedin">
                 <img src="/img/linkedin.svg" alt="linkedin-icon">
-                <p>LinkedIn</p>
+                <h4>LinkedIn</h4>
               </div>
               <div class="social-icons__pinterest">
                 <img src="/img/pinterest.svg" alt="pinterest-icon">
-                <p>Pinterest</p>
+                <h4>Pinterest</h4>
               </div>
               <div class="social-icons__twitter">
                 <img src="/img/twitter.svg" alt="twitter-icon">
-                <p>Twitter</p>
+                <h4>Twitter</h4>
               </div>
               <div class="social-icons__rss-feed">
                 <img src="/img/rss-feed.svg" alt="rss-feed-icon">
-                <p>RSS Feed</p>
+                <h4>RSS Feed</h4>
               </div>
               </div>
             </div>
