--- a/index.html
+++ b/index.html
@@ -40,11 +40,7 @@
       </header>
       <main class="main">
         <section class="slide">
-          <img
-            src="https://picsum.photos/954/500?q=1"
-            alt="slide-caption"
-            class="slide__image"
-          />
+          <img src="https://picsum.photos/954/500?q=1" alt="slide-caption" class="slide__image"/>
           <div class="opacity-caption">
             <h2>Slide 1 Caption</h2>
             <p>
@@ -59,19 +55,13 @@
             <div class="bullets-container__bullet"></div>
             <div class="bullets-container__bullet"></div>
             <div class="bullets-container__bullet"></div>
-            <div
-              class="bullets-container__bullet bullets-container__bullet_transparent"
-            ></div>
+            <div class="bullets-container__bullet"></div>
           </div>
         </section>
         <section class="cards">
           <div class="card">
-            <h1 class="card__header">Indonectetus facilis</h1>
-            <img
-              src="https://picsum.photos/280/280?q=2"
-              alt="card 1 image"
-              class="card__image"
-            />
+            <h2 class="card__header">Indonectetus facilis</h2>
+            <img src="https://picsum.photos/280/280?q=2" alt="card 1 image" class="card__image"/>
             <p class="card__paragraph">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta
               delectus quam molestiae necessitatibus deleniti aut veniam
@@ -82,19 +72,13 @@
               pariatur aperiam laudantium, nam accusantium atque totam ipsum.
               Dolorum quos officiis corrupti molestias?
             </p>
-            <span class="card__span"
-              ><a href="#continue-reading" class="card__link"
-                >Continue Reading >></a
-              ></span
-            >
+            <span class="card__span">
+              <a href="#continue-reading" class="card__link">Continue Reading >></a>
+            </span>
           </div>
           <div class="card">
-            <h1 class="card__header">Indonectetus facilis</h1>
-            <img
-              src="https://picsum.photos/280/280?q=3"
-              alt="card 2 image"
-              class="card__image"
-            />
+            <h2 class="card__header">Indonectetus facilis</h2>
+            <img src="https://picsum.photos/280/280?q=3" alt="card 2 image" class="card__image"/>
             <p class="card__paragraph">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta
               delectus quam molestiae necessitatibus deleniti aut veniam
@@ -105,19 +89,13 @@
               pariatur aperiam laudantium, nam accusantium atque totam ipsum.
               Dolorum quos officiis corrupti molestias?
             </p>
-            <span class="card__span"
-              ><a href="#continue-reading" class="card__link"
-                >Continue Reading >></a
-              ></span
-            >
+            <span class="card__span">
+              <a href="#continue-reading" class="card__link">Continue Reading >></a>
+            </span>
           </div>
           <div class="card">
-            <h1 class="card__header">Indonectetus facilis</h1>
-            <img
-              src="https://picsum.photos/280/280?q=4"
-              alt="card 3 image"
-              class="card__image"
-            />
+            <h2 class="card__header">Indonectetus facilis</h2>
+            <img src="https://picsum.photos/280/280?q=4" alt="card 3 image" class="card__image"/>
             <p class="card__paragraph">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta
               delectus quam molestiae necessitatibus deleniti aut veniam
@@ -128,96 +106,61 @@
               pariatur aperiam laudantium, nam accusantium atque totam ipsum.
               Dolorum quos officiis corrupti molestias?
             </p>
-            <span class="card__span"
-              ><a href="#continue-reading" class="card__link"
-                >Continue Reading >></a
-              ></span
-            >
+            <span class="card__span">
+              <a href="#continue-reading" class="card__link">Continue Reading >></a>
+            </span>
           </div>
         </section>
         <section class="gallery">
-          <h1>Latest From The Gallery</h1>
+          <h2>Latest From The Gallery</h2>
           <div class="gallery-grid">
-            <img
-              src="https://picsum.photos/550/250?q=5"
-              class="gallery-grid__main"
-              alt="gallery main image"
-            />
-            <img
-              src="https://picsum.photos/120/120?q=6"
-              class="gallery-grid__one"
-              alt="gallery image 1"
-            />
-            <img
-              src="https://picsum.photos/120/120?q=7"
-              class="gallery-grid__two"
-              alt="gallery image 2"
-            />
-            <img
-              src="https://picsum.photos/120/120?q=8"
-              class="gallery-grid__three"
-              alt="gallery image 3"
-            />
-            <img
-              src="https://picsum.photos/120/120?q=9"
-              class="gallery-grid__four"
-              alt="gallery image 4"
-            />
-            <img
-              src="https://picsum.photos/120/120?q=10"
-              class="gallery-grid__five"
-              alt="gallery image 5"
-            />
-            <img
-              src="https://picsum.photos/120/120?q=11"
-              class="gallery-grid__six"
-              alt="gallery image 6"
-            />
+            <img src="https://picsum.photos/550/250?q=5" class="gallery-grid__main" alt="gallery main image"/>
+            <img src="https://picsum.photos/120/120?q=6" class="gallery-grid__one" alt="gallery image 1"/>
+            <img src="https://picsum.photos/120/120?q=7" class="gallery-grid__two" alt="gallery image 2"/>
+            <img src="https://picsum.photos/120/120?q=8" class="gallery-grid__three" alt="gallery image 3"/>
+            <img src="https://picsum.photos/120/120?q=9" class="gallery-grid__four" alt="gallery image 4"/>
+            <img src="https://picsum.photos/120/120?q=10" class="gallery-grid__five" alt="gallery image 5"/>
+            <img src="https://picsum.photos/120/120?q=11" class="gallery-grid__six" alt="gallery image 6"/>
           </div>
         </section>
         <section class="social-media">
           <div class="newsletter">
-            <h3><i>Newsletter</i></h3>
+            <h3>Newsletter</h3>
             <p>
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quod,
               consequatur aliquid. Quibusdam harum velit ad cum! Praesentium
               consectetur ipsam doloribus!
             </p>
             <form class="form-sign-up">
-              <input
-                type="email"
-                name="email"
-                class="form-sign-up__email-input"
-                placeholder="Enter Your Email Here"
-              />
+              <input type="email" name="email" class="form-sign-up__email-input" placeholder="Enter Your Email Here"/>
               <button type="submit" class="form-sign-up__submit-button">
                 <b>SIGN UP</b>
               </button>
             </form>
             <div class="stay-social">
-              <h3><i>Stay Social</i></h3>
+              <h3>Stay Social</h3>
               <div class="social-icons">
-              <div class="social-icons__linkedin">
-                <img src="/img/linkedin.svg" alt="linkedin-icon">
-                <h4>LinkedIn</h4>
-              </div>
-              <div class="social-icons__pinterest">
-                <img src="/img/pinterest.svg" alt="pinterest-icon">
-                <h4>Pinterest</h4>
-              </div>
-              <div class="social-icons__twitter">
-                <img src="/img/twitter.svg" alt="twitter-icon">
-                <h4>Twitter</h4>
-              </div>
-              <div class="social-icons__rss-feed">
-                <img src="/img/rss-feed.svg" alt="rss-feed-icon">
-                <h4>RSS Feed</h4>
-              </div>
+                <div class="social-icons__linkedin">
+                  <img src="/img/linkedin.svg" alt="linkedin-icon" />
+                  <h4>LinkedIn</h4>
+                </div>
+                <div class="social-icons__pinterest">
+                  <img src="/img/pinterest.svg" alt="pinterest-icon" />
+                  <h4>Pinterest</h4>
+                </div>
+                <div class="social-icons__twitter">
+                  <img src="/img/twitter.svg" alt="twitter-icon" />
+                  <h4>Twitter</h4>
+                </div>
+                <div class="social-icons__rss-feed">
+                  <img src="/img/rss-feed.svg" alt="rss-feed-icon" />
+                  <h4>RSS Feed</h4>
+                </div>
               </div>
             </div>
           </div>
           <div class="from-the-blog">
-            <h3><i>From The Blog</i></h3>
+            <h3>From The Blog</h3>
             <div class="blog-post">
               <h5 class="blog-post__title">Blog Post Title</h5>
               <span>Posted by Admin on oo.oo.oooo</span>
@@ -225,11 +168,9 @@
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit
                 laudantium cum iure ducimus alias accusamus!
               </p>
-              <span class="social-media__span"
-                ><a href="#read-more" class="social-media__link"
-                  >Read more >></a
-                ></span
-              >
+              <span class="social-media__span">
+                <a href="#read-more" class="social-media__link">Read more >></a>
+              </span>
             </div>
             <div class="blog-post">
               <h5 class="blog-post__title">Blog Post Title</h5>
@@ -238,15 +179,13 @@
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit
                 laudantium cum iure ducimus alias accusamus!
               </p>
-              <span class="social-media__span"
-                ><a href="#read-more" class="social-media__link"
-                  >Read more >></a
-                ></span
-              >
+              <span class="social-media__span">
+                <a href="#read-more" class="social-media__link">Read more >></a>
+              </span>
             </div>
           </div>
           <div class="latest-from-twitter">
-            <h3><i>Latest From Twitter</i></h3>
+            <h3>Latest From Twitter</h3>
             <p>
               @namehere Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Eius, magnam sed! Ipsa id asperiores, modi pariatur debitis unde
@@ -262,21 +201,19 @@
               Eius, magnam sed! Ipsa id asperiores, modi pariatur debitis unde
               illum earum?
             </p>
-            <span class="social-media__span"
-              ><a href="#sign-up-twitter" class="social-media__link"
-                >Sign up to our Twitter feed here >></a
-              ></span
-            >
+            <span class="social-media__span">
+              <a href="#sign-up-twitter" class="social-media__link">Sign up to our Twitter feed here >></a>
+            </span>
           </div>
         </section>
       </main>
       <footer class="footer">
-        <span class="footer__span footer__span_left"
-          >Copyright © 2013 Domain Name - All Rights Reserved</span
-        >
-        <span class="footer__span footer__span_right"
-          >Template by OS Templates</span
-        >
+        <span class="footer__span footer__span_left">
+          Copyright © 2013 Domain Name - All Rights Reserved
+        </span>
+        <span class="footer__span footer__span_right">
+          Template by OS Templates
+        </span>
       </footer>
     </div>
   </body>
