--- a/index.html
+++ b/index.html
@@ -112,15 +112,15 @@
           </div>
         </section>
         <section class="gallery">
-          <h2>Latest From The Gallery</h2>
+          <h2 class="gallery__header">Latest From The Gallery</h2>
           <div class="gallery-grid">
-            <img src="https://picsum.photos/550/250?q=5" class="gallery-grid__main" alt="gallery main image"/>
-            <img src="https://picsum.photos/120/120?q=6" class="gallery-grid__one" alt="gallery image 1"/>
-            <img src="https://picsum.photos/120/120?q=7" class="gallery-grid__two" alt="gallery image 2"/>
-            <img src="https://picsum.photos/120/120?q=8" class="gallery-grid__three" alt="gallery image 3"/>
-            <img src="https://picsum.photos/120/120?q=9" class="gallery-grid__four" alt="gallery image 4"/>
-            <img src="https://picsum.photos/120/120?q=10" class="gallery-grid__five" alt="gallery image 5"/>
-            <img src="https://picsum.photos/120/120?q=11" class="gallery-grid__six" alt="gallery image 6"/>
+            <img src="https://picsum.photos/574/238?q=5" class="gallery-grid__main" alt="gallery main image"/>
+            <img src="https://picsum.photos/115/115?q=6" class="gallery-grid__small" alt="gallery image 1"/>
+            <img src="https://picsum.photos/115/115?q=7" class="gallery-grid__small" alt="gallery image 2"/>
+            <img src="https://picsum.photos/115/115?q=8" class="gallery-grid__small" alt="gallery image 3"/>
+            <img src="https://picsum.photos/115/115?q=9" class="gallery-grid__small" alt="gallery image 4"/>
+            <img src="https://picsum.photos/115/115?q=10" class="gallery-grid__small" alt="gallery image 5"/>
+            <img src="https://picsum.photos/115/115?q=11" class="gallery-grid__small" alt="gallery image 6"/>
           </div>
         </section>
         <section class="social-media">
